src/app/pages/errata/form/form.scss
@import 'variables';
@import 'mixins';

$label-4: #5f6163;
$table-dark-row: #f6f6f6;

.form-container {
    background-color: inherit;
    color: $label-4;
    margin-bottom: 18rem;
    padding: 0 1.5rem;

    > div {
        background-color: color(neutral-lightest);
        padding: 2rem 9rem;

        @include phone {
            padding: 2rem 1.5rem;
        }
    }

    .file-name {
        margin-left: 1rem;
    }

    .question {
        font-size: 1.8rem;
        font-weight: bold;
        margin-bottom: 1rem;
        margin-top: 3rem;
    }

    ::placeholder {
        color: lighten($label-4, 20%);
    }

    label {
        align-items: center;
        color: $label-4;
        display: flex;
        height: 4.2rem;
        margin: 0;
        padding-left: 2rem;
        position: relative;
        text-indent: -2rem;

        input:not(.hidden) {
            display: inline;
            height: 2rem;
            position: static;
        }

        .label-text {
            display: block;
            line-height: normal;
            margin-left: 0.5rem;
            text-indent: 0;
        }
    }

    .radio-columns {
        font-size: 1.6rem;

        [type="text"] {
            width: auto;
        }
    }

    .subnote {
        font-size: 1.2rem;
        font-style: italic;
        line-height: normal;

        &.wide {
            margin-bottom: 1rem;
            max-width: 75%;
        }
    }

    .file-button {
        display: flex;
        justify-content: flex-start;
    }

    .btn {
        background-color: $table-dark-row;
        border: 0;
        color: $label-4;
        display: flex;
        font-size: 1.6rem;
        height: 4.7rem;
        justify-content: center;
        margin: 0 0 3rem;
        text-indent: inherit;
        text-transform: none;
        width: 12rem;
    }

    [type="submit"].btn {
        background-color: color(orange);
        color: color(neutral-lightest);
        float: none;
        text-transform: uppercase;

        &[disabled] {
            background-color: $label-4;
        }
    }

    [type="text"][readonly] {
        background-color: lighten(black, 91.8%);
        color: lighten($label-4, 15%);
    }

    .helpbox {
        background-color: lighten(color(cyan), 47%);
        border: thin solid darken(color(cyan), 20%);
        border-radius: 0.2rem;
        color: darken(color(cyan), 22%);
        line-height: 1.5;
        margin-top: 1rem;
        overflow: hidden;
        padding: 1rem;
        transition: all 0.13s linear;

        &.not-visible {
            max-height: 0;
            opacity: 0;
            padding: 0 1rem;
            visibility: hidden;
        }
    }
}

